# byte-size-literals

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
.github/: WORKFLOWS.md
.github/actions/build-project/: action.yml
.github/actions/check-formatting/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/run-clang-tidy/: action.yml
.github/actions/setup-cpp-tools/: action.yml
.github/scripts/: RUN_CLANG_TIDY_README.md
.github/workflows/: static-code-analisys.yml
source/: byte_size_literals.hpp  main.cpp
